@@ -1,3 +1,9 @@
+2006-08-30  Benoît Dejean  <benoit@placenet.org>
+
+	* src/proctable.c: (search_equal_func):
+
+	Fixed a small memory leak.
+
 2006-08-21  Benoît Dejean  <benoit@placenet.org>
 
 	* NEWS:
